[project]
name = "pypqc"
version = "0.0.6.post1.dev0+feature.unittest"
description = "Python bindings for the \"PQClean\" post-quantum cryptography library."
readme = "README.rst"
urls = {"Homepage" = "https://github.com/JamesTheAwesomeDude/pypqc"}
dependencies = [
    'cffi >= 1.0.0',
]

[build-system]
requires = [
    'cffi >= 1.14.5',
    'setuptools >= 49.5.0',
]
