[project]
name = "pypqc"
version = "0.0.6.1-dev3"
description = "Python bindings for the \"PQClean\" post-quantum cryptography library."
readme = "README.rst"
urls = {"Homepage" = "https://github.com/JamesTheAwesomeDude/pypqc"}
dependencies = [
    'cffi >= 1.0.0',
]

[tool.setuptools.packages.find]
include = ["pqc"]
namespaces = false

[build-system]
requires = [
    'cffi >= 1.14.5',
    'setuptools @ git+https://github.com/JamesTheAwesomeDude/pypa-setuptools.git@site-patches/pypqc',
]
