[project]
name = 'pypqc'
version = '0.2.0-dev0'
description = 'Python bindings for the "PQClean" post-quantum cryptography library.'
readme = 'README.rst'
license.file = 'COPYING.rst'
urls = { Source = 'https://github.com/James-E-A/pypqc', Upstream = 'https://github.com/PQClean/PQClean' }
dependencies = [
    'cffi >= 1.12;platform_python_implementation != "PyPy"',
]

[tool.setuptools.packages.find]
include = ['pqc']
namespaces = false

[build-system]
requires = [
    'cffi >= 1.14.5',
    'setuptools >= 49.5.0',
    'wheel >= 0.30.0',
]

[tool.ruff.format]
quote-style = 'single'
indent-style = 'tab'
