[project]
name = 'pypqc-cffi-bindings-libre'
version = '0-dev0'
dependencies = [
    'cffi >= 1.0.0;platform_python_implementation != "PyPy"',
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'License :: Public Domain',
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = [
    'cffi >= 1.14.5',
    'setuptools >= 49.5.0',
    'wheel >= 0.30.0',
]
build-backend = "setuptools.build_meta"
